tests/sksl/errors/InvalidMainParameters.glsl
### Compilation failed:

error: 1: shader 'main' must have zero parameters
void main(in int x, out int y) {
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: 2: unknown identifier 'y'
    y = x;
    ^
error: 2: unknown identifier 'x'
    y = x;
        ^
3 errors
